# shield

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
examples/: main.cpp
include/shield/: all.hpp  bulkhead.hpp  circuit.hpp  circuitbreaker.hpp  exceptions.hpp  fallback.hpp  retry.hpp  timeout.hpp
src/: circuitbreaker.cpp  fallback.cpp  resilience_patterns.cpp  retry.cpp  timeout.cpp
src/circuit/: circuit.cpp  circuitbreaker.cpp  circuitbreakermanager.cpp
src/detail/circuit/: circuitbreakermanager.cpp  circuitbreakermanager.hpp
src/unittests/: test_bulkhead.cpp  test_circuit.cpp  test_circuitbreaker.cpp  test_fallback.cpp  test_integration.cpp  test_retry.cpp  test_timeout.cpp
